--- a/.gitignore
+++ b/.gitignore
@@ -11,6 +11,10 @@ node_modules
 dist
 dist-ssr
 *.local
+.env
+.env.*.local
+supabase/.temp/
+tmp-unicode.txt
 
 # Editor directories and files
 .vscode/*
